[package]
name = "dev_os"
version = "0.1.0"
authors = ["jason <imaginezz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.2", features = ["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.5.2"
x86_64 = "0.10.2"
uart_16550 = "0.2.5"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.4"
crossbeam-queue = {version = "0.2.1", default-features = false, features = ["alloc"]}
conquer-once = {version = "0.2.0", default-features = false}
futures-util = {version = "0.3.5", default-features = false, features = ["alloc"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio", 
    "-display", "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 10